--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
     //progressbar
+    implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
+
 }
