--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
 
     // Navigation library
     def nav_version = "2.4.2"
@@ -103,5 +104,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
     //progressbar
     implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
 
 }
