--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,15 +22,19 @@
         android:theme="@style/Theme.KnowMe"
         tools:targetApi="31">
         <activity
+            android:name=".StaticActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SelectScreen"
+            android:exported="false" />
+        <activity
             android:name=".Splash_Activity"
-            android:exported="true" >
-
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".MainActivity"
