--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
     //progressbar
     implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
+    //imagepicker
     implementation 'com.github.dhaval2404:imagepicker:2.1'
 
 
